assets/css/main.css
@import "tailwindcss";
@import "@nuxt/ui";
@theme static{
    --color-info: #FF2364
}
body{
     font-family: Circuclar, sans-serif;
}
.topbar{
    background-color: #FF2364;
    margin-bottom: 80px;
    height: 60px;
}
.topbar__text{
    color: black;
}
.person{
-webkit-font-smoothing: antialiased;
text-size-adjust: none;
color: #333244;
font-size: 1.6rem;
font-weight: 200;
text-decoration-skip-ink: auto;
font-family: Circular,sans-serif;
line-height: 1.2666666667;
box-sizing: inherit;
max-width: 33em;
}
.person__picture{
    -webkit-font-smoothing: antialiased;
    text-size-adjust: none;
    color: #333244;
    font-size: 1.6rem;
    font-weight: 200;
    text-decoration-skip-ink: auto;
    font-family: Circular,sans-serif;
    line-height: 1.2666666667;
    box-sizing: inherit;
    display: block;
    height: auto;
    max-width: 100%;
    background-image: linear-gradient(180deg,#f5f5f5,#e1e0e3);
    margin-bottom: 1em;
    :hover{
        opacity: 25%;
    }
  
}
.person__picture_text{
    display: none;
    justify-self: center;
    position: absolute;
}
.person__picture:hover .person__picture_text{
    display: block;
}
.person__header{
    -webkit-font-smoothing: antialiased;
    text-size-adjust: none;
    color: #333244;
    font-size: 1.6rem;
    font-weight: 200;
    text-decoration-skip-ink: auto;
    font-family: Circular,sans-serif;
    line-height: 1.2666666667;
    box-sizing: inherit;
    margin-bottom: 1em;
}
.person__content{
    -webkit-font-smoothing: antialiased;
    text-size-adjust: none;
    color: #333244;
    font-weight: 200;
    text-decoration-skip-ink: auto;
    font-family: Circular,sans-serif;
    line-height: 1.2666666667;
    box-sizing: inherit;
    margin-bottom: .5em;
    font-size: 1.8rem;
}
.person__actions{
    -webkit-font-smoothing: antialiased;
    text-size-adjust: none;
    color: #333244;
    font-weight: 200;
    text-decoration-skip-ink: auto;
    font-family: Circular,sans-serif;
    line-height: 1.2666666667;
    box-sizing: inherit;
    font-size: 1.8rem;
}
.person-overview__item{
    -webkit-font-smoothing: antialiased;
    text-size-adjust: none;
    color: #333244;
    font-size: 1.6rem;
    font-weight: 200;
    text-decoration-skip-ink: auto;
    font-family: Circular,sans-serif;
    line-height: 1.2666666667;
    box-sizing: inherit;
    margin-top: 3.5em;
}
.person__img{
    -webkit-font-smoothing: antialiased;
    text-size-adjust: none;
    color: #333244;
    font-size: 1.6rem;
    font-weight: 200;
    text-decoration-skip-ink: auto;
    font-family: Circular,sans-serif;
    line-height: 1.2666666667;
    aspect-ratio: auto 342 / 478;
    box-sizing: inherit;
    border-style: none;
    display: block;
    height: auto;
    max-width: 100%;
    width: 100%;
}
.person__title{
    -webkit-font-smoothing: antialiased;
    text-size-adjust: none;
    text-decoration-skip-ink: auto;
    box-sizing: inherit;
    font-family: Circular,sans-serif;
    letter-spacing: -.015625em;
    margin: 0;
    padding: 0;
    color: #ff0953;
    font-weight: 400;
    line-height: 1.5;
    font-size: 2.3rem;
}
.link{
    -webkit-font-smoothing: antialiased;
    text-size-adjust: none;
    text-decoration-skip-ink: auto;
    font-family: Circular,sans-serif;
    line-height: 1.2666666667;
    font-size: 1.8rem;
    box-sizing: inherit;
    background-color: transparent;
    margin: 0;
    padding: 0;
    align-items: center;
    color: #ff0953;
    display: inline-flex;
    font-weight: 400;
    text-decoration: none;
    text-transform: lowercase;
    transition: color .2s cubic-bezier(.65,.05,.36,1);
}
.person-overview{
    -webkit-font-smoothing: antialiased;
    text-size-adjust: none;
    color: #333244;
    font-size: 1.6rem;
    font-weight: 200;
    text-decoration-skip-ink: auto;
    font-family: Circular,sans-serif;
    line-height: 1.2666666667;
    box-sizing: inherit;
    padding-left: 8.3333333333vw;
    padding-right: calc(12.5vw - 2em);
}
.person-overview__list{
    -webkit-font-smoothing: antialiased;
    text-size-adjust: none;
    color: #333244;
    font-size: 1.6rem;
    font-weight: 200;
    text-decoration-skip-ink: auto;
    font-family: Circular,sans-serif;
    line-height: 1.2666666667;
    box-sizing: inherit;
    margin-top: -3.5em;
    margin-left: -3.5em;
    margin-right: -4.5em; 
}
.name{
    font-size: xxx-large;
    font-family: Circuclar, sans-serif;
}
.profile-pic-wrapper { 
    width: 150px;
    height: 150px;
    border-radius: 100%; 
    overflow: hidden; 
    display: flex; 
    align-items: center; 
    justify-content: center; 
    outline: auto #ff0953;
    
} 

.profile-pic { 
    width: 100%; 
    height: 100%; 
    object-fit: cover;
    transform-origin: 40% -20%;
}
.no-scrollbar::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

